<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_slogan">Water Quality System</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="selectTest">Select Test</string>
    <string name="save">Save</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
    <string name="aluminum">.</string>
    <string name="arsenic_iii">.</string>
    <string name="chromium">.</string>
    <string name="copper">.</string>
...

    <!-- Calibration Screen -->
    <string name="calibration">Calibration</string>
    <string name="calibrated">Calibrated</string>
    <string name="calibrationDetails">Calibration Details</string>
    <string name="expires">Expires</string>
    <string name="expired">Expired</string>
    <string name="couldNotCalibrate">Could not calibrate</string>
    <string name="calibrationIsInvalid">Invalid calibration</string>
    <string name="tryRecalibrating">Try recalibrating</string>
    <string name="reagentExpiry">Reagent expiry</string>
    <string name="errorCalibrationExpired">Calibration is past its reagent expiry date</string>
    <string name="orderFreshBatch">Please order a fresh batch of reagent and recalibrate</string>

    <!-- Dilution Selection Dialog -->
    <string name="dilution">Dilution</string>
    <string name="selectDilution">Select amount of dilution</string>
    <string name="noDilution">No Dilution</string>
    <string name="timesDilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="calibrateWithNewReagent">Recalibrate with fresh reagent</string>
    <!-- Test Progress Screen -->
    <string name="placeDevice">Place device face down on a flat surface</string>
    <string name="errorTestInterrupted">Test was interrupted.</string>
    <string name="doNotMoveDeviceDuringTest">Do not move the phone during the test</string>
    <string name="errorTestFailed">Colour does not match any calibrated colours.</string>
    <string name="chamberNotFound">Could not complete test.</string>
...
    <string name="testWithDilution">Test with Dilution</string>

    <!-- Permission -->
    <string name="storagePermission">Storage permission is required</string>
    <string name="cameraAndStoragePermissions">Camera &amp; storage permissions are required</string>
    <!-- Alerts -->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera required.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>
...
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
    <string name="errorCalibrationIncomplete">Calibration for %1$s is incomplete</string>
    <string name="doYouWantToCalibrate">Do you want to calibrate now?</string>
    <string name="screen_pinned">Screen pinned. Press \'Home\' button for more information.</string>
    <!-- Support -->
    <string name="emailSupport">Email support</string>
    <string name="send_details_to_support">Send details to support for assistance</string>
    <string name="if_you_need_assistance">Send information to our support team to help provide you with assistance in using the app.</string>
    <string name="select_email_app">Please select your email app in the next step and send the generated email.</string>
...
