...
                android:textSize="16sp"
                tools:text="Ref: 20180907_FRefLK8+ (d:100)" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabEditCalibration"
            style="@style/floating_action_button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layoutTitleBar"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/edit_calibration_details"
...
            android:src="@android:drawable/ic_menu_edit"
            app:backgroundTint="?fabButtonColor"
            app:borderWidth="0dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textCalibrationError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTitleBar"
            android:background="@color/error_background"
            android:drawableStart="@drawable/ic_warning_black_24dp"
            android:gravity="center_vertical"
...
