...
        android:icon="@android:drawable/stat_sys_download"
        android:onClick="onReceiveResult"
        android:title="Receive results"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:onClick="onSettingsClick"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>

