...
    <string name="prepareSolutionsForCalibration">Prepare 6 solutions with these EC values</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning…</string>
    <string name="searching_for_device">Searching for bluetooth devices</string>

    <string name="view_results">View results</string>
...
